// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToolStatsDisplay /> > should display stats for a single tool correctly 1`] = `
"╭────────────────────────────────────────────────────────────────────╮
│                                                                    │
│  Статистика інструментів для гіків                                 │
│                                                                    │
│  Назва інструменту         ВикликиПоказник успіхуСер. тривалість   │
│  ────────────────────────────────────────────────────────────────  │
│  test-tool                       1         100.0%          100мс   │
│                                                                    │
│  Підсумок рішень користувача                                       │
│  Всього переглянутих пропозицій:                               1   │
│   » Прийнято:                                                  1   │
│   » Відхилено:                                                 0   │
│   » Змінено:                                                   0   │
│  ────────────────────────────────────────────────────────────────  │
│   Загальний показник згоди:                               100.0%   │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should display stats for multiple tools correctly 1`] = `
"╭────────────────────────────────────────────────────────────────────╮
│                                                                    │
│  Статистика інструментів для гіків                                 │
│                                                                    │
│  Назва інструменту         ВикликиПоказник успіхуСер. тривалість   │
│  ────────────────────────────────────────────────────────────────  │
│  tool-a                          2          50.0%          100мс   │
│  tool-b                          1         100.0%          100мс   │
│                                                                    │
│  Підсумок рішень користувача                                       │
│  Всього переглянутих пропозицій:                               3   │
│   » Прийнято:                                                  1   │
│   » Відхилено:                                                 1   │
│   » Змінено:                                                   1   │
│  ────────────────────────────────────────────────────────────────  │
│   Загальний показник згоди:                                33.3%   │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should handle large values without wrapping or overlapping 1`] = `
"╭────────────────────────────────────────────────────────────────────╮
│                                                                    │
│  Статистика інструментів для гіків                                 │
│                                                                    │
│  Назва інструменту         ВикликиПоказник успіхуСер. тривалість   │
│  ────────────────────────────────────────────────────────────────  │
│  long-named-tool-for-testi99999999          88.9%            1мс   │
│  ng-wrapping-and-such     9                                        │
│                                                                    │
│  Підсумок рішень користувача                                       │
│  Всього переглянутих пропозицій:                       222234566   │
│   » Прийнято:                                          123456789   │
│   » Відхилено:                                          98765432   │
│   » Змінено:                                               12345   │
│  ────────────────────────────────────────────────────────────────  │
│   Загальний показник згоди:                                55.6%   │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should handle zero decisions gracefully 1`] = `
"╭────────────────────────────────────────────────────────────────────╮
│                                                                    │
│  Статистика інструментів для гіків                                 │
│                                                                    │
│  Назва інструменту         ВикликиПоказник успіхуСер. тривалість   │
│  ────────────────────────────────────────────────────────────────  │
│  test-tool                       1         100.0%          100мс   │
│                                                                    │
│  Підсумок рішень користувача                                       │
│  Всього переглянутих пропозицій:                               0   │
│   » Прийнято:                                                  0   │
│   » Відхилено:                                                 0   │
│   » Змінено:                                                   0   │
│  ────────────────────────────────────────────────────────────────  │
│   Загальний показник згоди:                                   --   │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should render "no tool calls" message when there are no active tools 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  У цій сесії викликів інструментів не було.                                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
